--- a/index.html
+++ b/index.html
@@ -2,36 +2,64 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Oil Spill Background</title>
   <style>
-    body, html {
-      margin: 0; padding: 0; height: 100%; width: 100%;
-      background: #0d0d0d; /* dark background */
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
       overflow: hidden;
+      background: black;
     }
-    canvas { display: block; }
+    canvas {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
   </style>
 </head>
 <body>
-<canvas id="oil"></canvas>
-<script>
-  const c = document.getElementById("oil");
-  const ctx = c.getContext("2d");
-  c.width = window.innerWidth;
-  c.height = window.innerHeight;
-
-  function draw(t) {
-    ctx.clearRect(0, 0, c.width, c.height);
-    for (let i = 0; i < 8; i++) {
-      ctx.beginPath();
-      const x = c.width/2 + Math.sin(t/1000 + i) * 200;
-      const y = c.height/2 + Math.cos(t/1000 + i) * 200;
-      ctx.fillStyle = `hsla(${(t/20+i*40)%360}, 80%, 50%, 0.5)`;
-      ctx.arc(x, y, 200, 0, Math.PI * 2);
-      ctx.fill();
+  <canvas id="oil"></canvas>
+  <script>
+    const canvas = document.getElementById('oil');
+    const ctx = canvas.getContext('2d');
+    let w, h;
+    function resize() {
+      w = canvas.width = window.innerWidth;
+      h = canvas.height = window.innerHeight;
     }
-    requestAnimationFrame(draw);
-  }
-  requestAnimationFrame(draw);
-</script>
+    window.addEventListener('resize', resize);
+    resize();
+
+    const blobs = Array.from({length: 12}, () => ({
+      x: Math.random() * w,
+      y: Math.random() * h,
+      r: 80 + Math.random() * 100,
+      dx: (Math.random() - 0.5) * 0.7,
+      dy: (Math.random() - 0.5) * 0.7,
+      color: `hsl(${Math.random() * 360}, 80%, 50%)`
+    }));
+
+    function draw() {
+      ctx.clearRect(0, 0, w, h);
+      for (let b of blobs) {
+        const gradient = ctx.createRadialGradient(b.x, b.y, b.r * 0.2, b.x, b.y, b.r);
+        gradient.addColorStop(0, b.color);
+        gradient.addColorStop(1, 'transparent');
+        ctx.fillStyle = gradient;
+        ctx.beginPath();
+        ctx.arc(b.x, b.y, b.r, 0, Math.PI * 2);
+        ctx.fill();
+
+        b.x += b.dx;
+        b.y += b.dy;
+        if (b.x < 0 || b.x > w) b.dx *= -1;
+        if (b.y < 0 || b.y > h) b.dy *= -1;
+      }
+      requestAnimationFrame(draw);
+    }
+    draw();
+  </script>
 </body>
 </html>
