--- a/index.html
+++ b/index.html
@@ -3,60 +3,75 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Oil Spill Background</title>
+  <title>Junto Oil Orb</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
       height: 100%;
-      overflow: hidden;
-      background: black;
+      background: #000;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
     canvas {
       display: block;
-      width: 100%;
-      height: 100%;
     }
   </style>
 </head>
 <body>
-  <canvas id="oil"></canvas>
+  <canvas id="orb"></canvas>
   <script>
-    const canvas = document.getElementById('oil');
-    const ctx = canvas.getContext('2d');
+    const canvas = document.getElementById("orb");
+    const ctx = canvas.getContext("2d");
     let w, h;
     function resize() {
       w = canvas.width = window.innerWidth;
       h = canvas.height = window.innerHeight;
     }
-    window.addEventListener('resize', resize);
+    window.addEventListener("resize", resize);
     resize();
 
-    const blobs = Array.from({length: 12}, () => ({
-      x: Math.random() * w,
-      y: Math.random() * h,
-      r: 80 + Math.random() * 100,
-      dx: (Math.random() - 0.5) * 0.7,
-      dy: (Math.random() - 0.5) * 0.7,
-      color: `hsl(${Math.random() * 360}, 80%, 50%)`
-    }));
-
+    let t = 0;
     function draw() {
       ctx.clearRect(0, 0, w, h);
-      for (let b of blobs) {
-        const gradient = ctx.createRadialGradient(b.x, b.y, b.r * 0.2, b.x, b.y, b.r);
-        gradient.addColorStop(0, b.color);
-        gradient.addColorStop(1, 'transparent');
-        ctx.fillStyle = gradient;
-        ctx.beginPath();
-        ctx.arc(b.x, b.y, b.r, 0, Math.PI * 2);
-        ctx.fill();
 
-        b.x += b.dx;
-        b.y += b.dy;
-        if (b.x < 0 || b.x > w) b.dx *= -1;
-        if (b.y < 0 || b.y > h) b.dy *= -1;
+      const cx = w / 2;
+      const cy = h / 2;
+      const radius = Math.min(w, h) / 3;
+
+      // Clip into a circular shape
+      ctx.save();
+      ctx.beginPath();
+      ctx.arc(cx, cy, radius, 0, Math.PI * 2);
+      ctx.clip();
+
+      // Create flowing gradient effect
+      for (let i = 0; i < 30; i++) {
+        const angle = (t / 50 + i) * 0.3;
+        const x = cx + Math.sin(angle) * radius * 0.8;
+        const y = cy + Math.cos(angle * 1.2) * radius * 0.8;
+
+        const grad = ctx.createRadialGradient(x, y, 10, x, y, radius);
+        grad.addColorStop(0, `hsla(${200 + (i * 12) % 100}, 100%, 50%, 0.3)`);
+        grad.addColorStop(1, "transparent");
+
+        ctx.fillStyle = grad;
+        ctx.fillRect(cx - radius, cy - radius, radius * 2, radius * 2);
       }
+
+      ctx.restore();
+
+      // Outer glow ring
+      ctx.beginPath();
+      ctx.arc(cx, cy, radius, 0, Math.PI * 2);
+      ctx.strokeStyle = "rgba(120, 0, 255, 0.6)";
+      ctx.lineWidth = 6;
+      ctx.shadowBlur = 30;
+      ctx.shadowColor = "cyan";
+      ctx.stroke();
+
+      t += 1;
       requestAnimationFrame(draw);
     }
     draw();
